Two cards added

--- a/index.html
+++ b/index.html
@@ -107,12 +107,24 @@
                 </div>
                 <div class="img-card">
                     <picture>
-                        <source media="(max-width: 499px)" srcset="images/woman_child_cropped_200px.png">
-                        <source media="(min-width: 500px)" srcset="images/woman_child_300px.png">
-                        <img src="images/woman_child_300px.png" alt="Woman and child">
+                        <source media="(max-width: 499px)" srcset="images/woman_awesome_cropped_200px.png">
+                        <source media="(min-width: 500px)" srcset="images/woman_awesome_300px.png">
+                        <img src="images/woman_awesome_300px.png" alt="Woman and child">
                     </picture>
                     <div class="card-content">
-                        <h3>Woman and child</h3>
+                        <h3>Woman being awesome</h3>
+                        <p>Sequi accusamus, aspernatur velit architecto at laboriosam.</p>
+                        <button>Just relax</button>
+                    </div>
+                </div>
+                <div class="img-card">
+                    <picture>
+                        <source media="(max-width: 499px)" srcset="images/woman_sea_cropped_200px.png">
+                        <source media="(min-width: 500px)" srcset="images/woman_sea_300px.png">
+                        <img src="images/woman_sea_cropped_200px.png" alt="Woman and child">
+                    </picture>
+                    <div class="card-content">
+                        <h3>Woman and sea</h3>
                         <p>Sequi accusamus, aspernatur velit architecto at laboriosam.</p>
                         <button>Just relax</button>
                     </div>
@@ -126,8 +138,8 @@
         <h1>Embed a video</h1>
         <p>Read more: <a href="https://www.w3schools.com/tags/tag_video.asp" target="_blank">w3school - video tag</a></p>
         <div class="video-container">
-            <video  controls autoplay loop muted 
-                    preload="auto" 
+            <video  controls autoplay loop muted
+                    preload="auto"
                     poster="videos/video_banner.jpg">
                 <source src="videos/sunset_africa.mp4" type="video/mp4">
                 <p>Your browser does not support the video tag.</p>
